<?xml version="1.0" encoding="UTF-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    tools:context=".AcercaDe" android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include android:id="@+id/miActionBarFavoritos"
        layout="@layout/actionbarfavoritos"> </include>


    -<com.mikhaellopez.circularimageview.CircularImageView
    android:id="@+id/fotoBio"
    android:layout_height="200dp"
    android:layout_width="200dp"
    android:layout_gravity="center_horizontal"
    app:civ_shadow_color="#0127FA"
    app:civ_shadow_radius="10dp"
    app:civ_shadow="true"
    app:civ_border_width="4dp"
    app:civ_border_color="#00BCD4"
    android:src="@drawable/gato">

</com.mikhaellopez.circularimageview.CircularImageView>
    <TextView android:id="@+id/txtvbioNombre"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/txtv_bionombre"/>

    <View android:layout_height="1dp"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:padding="30dp"/>



    <TextView android:id="@+id/txtvbioTitulo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/tv_biotitulo"/>

    <TextView android:id="@+id/txtvbioDescripcion"
        android:textStyle="italic"
        android:textSize="15sp"
        android:text="@string/tv_biodescripcion"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:typeface="monospace"
        android:gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>